[gd_scene load_steps=9 format=3 uid="uid://cx42rqy0cu5mw"]

[ext_resource type="Theme" uid="uid://be5w4ua33gtra" path="res://themes/buttons.tres" id="1_i63r8"]
[ext_resource type="Script" path="res://levels/main.gd" id="1_iar1n"]
[ext_resource type="FontFile" uid="uid://ceoj7py0vd6t2" path="res://fonts/Super Milk.ttf" id="1_lm1gn"]
[ext_resource type="Texture2D" uid="uid://b3t3tfppbfun2" path="res://sprites/snake_tileset.png" id="3_hm57b"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_snc6g"]
texture = ExtResource("3_hm57b")
texture_region_size = Vector2i(64, 64)
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
8:7/0 = 0
7:7/0 = 0
5:7/0 = 0
4:7/0 = 0
3:7/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0

[sub_resource type="TileSet" id="TileSet_unskh"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_snc6g")

[sub_resource type="LabelSettings" id="LabelSettings_qo2ru"]
font = ExtResource("1_lm1gn")
font_size = 56
font_color = Color(0.552941, 0.0117647, 0.352941, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_orjjo"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_i63r8")
script = ExtResource("1_iar1n")

[node name="TileMapBackground" type="TileMap" parent="."]
tile_set = SubResource("TileSet_unskh")
cell_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(0, 458752, 7, 1, 458752, 7, 2, 458752, 7, 3, 458752, 7, 4, 458752, 7, 5, 458752, 7, 6, 458752, 7, 7, 458752, 7, 8, 458752, 7, 9, 458752, 7, 10, 458752, 7, 11, 458752, 7, 12, 458752, 7, 13, 458752, 7, 14, 458752, 7, 15, 458752, 7, 589824, 458752, 7, 589825, 458752, 7, 589826, 458752, 7, 589827, 458752, 7, 589828, 458752, 7, 589829, 458752, 7, 589830, 458752, 7, 589831, 458752, 7, 589832, 458752, 7, 589833, 458752, 7, 589834, 458752, 7, 589835, 458752, 7, 589836, 458752, 7, 589837, 458752, 7, 589838, 458752, 7, 589839, 458752, 7, 65536, 196608, 6, 65551, 327680, 6, 65550, 262144, 6, 65549, 262144, 6, 65548, 262144, 6, 65547, 262144, 6, 65546, 262144, 6, 65545, 262144, 6, 65544, 262144, 6, 65543, 262144, 6, 65542, 262144, 6, 65541, 262144, 6, 65540, 262144, 6, 65539, 262144, 6, 65538, 262144, 6, 65537, 262144, 6, 131072, 196608, 7, 196608, 196608, 7, 262144, 196608, 7, 327680, 196608, 7, 393216, 196608, 7, 458752, 196608, 7, 131087, 327680, 7, 196623, 327680, 7, 262159, 327680, 7, 327695, 327680, 7, 393231, 327680, 7, 458767, 327680, 7, 524303, 327680, 8, 524302, 262144, 8, 524301, 262144, 8, 524300, 262144, 8, 524299, 262144, 8, 524298, 262144, 8, 524297, 262144, 8, 524296, 262144, 8, 524295, 262144, 8, 524294, 262144, 8, 524293, 262144, 8, 524292, 262144, 8, 524291, 262144, 8, 524290, 262144, 8, 524289, 262144, 8, 524288, 196608, 8, 458757, 262144, 7, 393221, 262144, 7, 327685, 262144, 7, 262149, 262144, 7, 196613, 262144, 7, 131077, 262144, 7, 131076, 262144, 7, 131075, 262144, 7, 131074, 262144, 7, 131073, 262144, 7, 196609, 262144, 7, 262145, 262144, 7, 327681, 262144, 7, 393217, 262144, 7, 458753, 262144, 7, 458754, 262144, 7, 393218, 262144, 7, 327682, 262144, 7, 262146, 262144, 7, 196610, 262144, 7, 196611, 262144, 7, 262147, 262144, 7, 327683, 262144, 7, 393219, 262144, 7, 458755, 262144, 7, 458756, 262144, 7, 393220, 262144, 7, 327684, 262144, 7, 262148, 262144, 7, 196612, 262144, 7, 131078, 262144, 7, 196614, 262144, 7, 262150, 262144, 7, 327686, 262144, 7, 393222, 262144, 7, 458758, 262144, 7, 458759, 262144, 7, 393223, 262144, 7, 327687, 262144, 7, 262151, 262144, 7, 196615, 262144, 7, 131079, 262144, 7, 131080, 262144, 7, 196616, 262144, 7, 262152, 262144, 7, 327688, 262144, 7, 393224, 262144, 7, 458760, 262144, 7, 458761, 262144, 7, 393225, 262144, 7, 327689, 262144, 7, 262153, 262144, 7, 196617, 262144, 7, 131081, 262144, 7, 131082, 262144, 7, 196618, 262144, 7, 262154, 262144, 7, 327690, 262144, 7, 393226, 262144, 7, 458762, 262144, 7, 458763, 262144, 7, 393227, 262144, 7, 327691, 262144, 7, 262155, 262144, 7, 196619, 262144, 7, 131083, 262144, 7, 131084, 262144, 7, 196620, 262144, 7, 262156, 262144, 7, 327692, 262144, 7, 393228, 262144, 7, 458764, 262144, 7, 458765, 262144, 7, 393229, 262144, 7, 327693, 262144, 7, 262157, 262144, 7, 196621, 262144, 7, 131085, 262144, 7, 131086, 262144, 7, 196622, 262144, 7, 262158, 262144, 7, 327694, 262144, 7, 393230, 262144, 7, 458766, 262144, 7)

[node name="StartLabel" type="Label" parent="."]
layout_mode = 0
offset_top = 63.0
offset_right = 1025.0
offset_bottom = 219.0
text = "Marty Arcade"
label_settings = SubResource("LabelSettings_qo2ru")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Menu" type="MenuButton" parent="."]
layout_mode = 0

[node name="SnakeButton" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 289.0
offset_top = 248.0
offset_right = 738.0
offset_bottom = 279.0
focus_neighbor_top = NodePath("../QuitButton")
text = "Play SNAKE"
icon = SubResource("ViewportTexture_orjjo")

[node name="SpaceInvaderButton" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 289.0
offset_top = 293.0
offset_right = 738.0
offset_bottom = 324.0
disabled = true
text = "Play SPACE INVADER"
icon = SubResource("ViewportTexture_orjjo")

[node name="PongButton" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 289.0
offset_top = 339.0
offset_right = 738.0
offset_bottom = 370.0
disabled = true
text = "Play Pong"
icon = SubResource("ViewportTexture_orjjo")

[node name="QuitButton" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 289.0
offset_top = 385.0
offset_right = 738.0
offset_bottom = 416.0
focus_neighbor_bottom = NodePath("../SnakeButton")
text = "Quit"
icon = SubResource("ViewportTexture_orjjo")

[connection signal="pressed" from="Menu/SnakeButton" to="." method="_on_snake_button_pressed"]
[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_quit_button_pressed"]
